internal/reconcile/testdata/golden/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kreg.twr.dev/managed-by: prod-web
  name: prod-web-kreg
  namespace: gateways
spec:
  clusterIP: None
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 0
status:
  loadBalancer: {}
